removed h1 headers, since they are now automatically added from title

--- a/data/blog/hci-wifi.mdx
+++ b/data/blog/hci-wifi.mdx
@@ -4,11 +4,9 @@ publishedAt: '2021-08-03'
 summary: "Logging in to Hwa Chong's STUDENT_WLAN as a student"
 ---
 
-# Using Hwa Chong's WiFi
-
 Login credentials are your Windows Login ID and password.
 
-Set the following settings and you shouldn't be too far off:  
+Follow these settings and you shouldn't be too far off:  
 * **SSID/Network name:** STUDENT_WLAN
 * **Security type:** WPA2-Enterprise
 * **Encryption type:** AES
