made dashboard into a music page

--- a/data/blog/vim-sets.mdx
+++ b/data/blog/vim-sets.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Configuring vimrc"
+title: "Your first vimrc"
 publishedAt: '2021-08-04'
-summary: "Core settings to kick start your journey with vim"
+summary: "Simple settings to kick start your journey with vim"
 ---
 
 Unlike most applications with a graphical settings menu, vim's settings are configured inside of a **vimrc** file. But where do you find/put this file?
