--- a/data/uses.mdx
+++ b/data/uses.mdx
@@ -2,50 +2,35 @@
 title: 'Uses'
 ---
 
-<Image
-  alt={`My computer desk`}
-  src={`/static/images/desk.jpg`}
-  width={1000}
-  height={735}
-  priority
-/>
+### Computer / Desk
 
-### Computer / Office
-
-- 16" Macbook Pro (2020)
-- 31.5" LG UltraFine 32UN880
-- Logitech MX Master 3 Mouse
-- Keychron K3 (Red) Mechanical Keyboard
-- Focal XS 2.1 w/ Subwoofer
-- Autonomous SmartDesk 2
-- Autonomous ErgoChair 2
+- 13" Macbook Air (2017)
+- 24" Lenovo L24e-20
+- Razer Basilisk
+- Keebio Iris Split Keyboard
 
 ### Coding
 
-- Editor: VSCode ([Extensions](https://github.com/leerob/fastfeedback/blob/master/.vscode/extensions.json))
-- Theme: Sorcerer
-- Terminal: Hyper / zsh
+- Editor: neovim ([config](https://github.com/nguyenvukhang/neovim))
+- Theme: gruvbox
+- Terminal: kitty / zsh
 
-### Audio / Video
+### Audio
 
-- Sony A7III (28-50mm, 35mm f1.8)
-- Shure MV7 + Boom
-- Elgato Camlink
-- Logitech C920
-- Elgato Key Light (x2)
-- Elgato Master Mount
+- Focusrite Scarlett 2i2 Audio Interface
+- Samson C03 Condenser Mic
+- AKG K702 Headphones
 
 ### Music
 
-- Yamaha P-105 Piano
-- Roland TD-20 V-Drums
-- Roland AC-60
-- Shure SM58
-- Martin Acoustic Guitar (X-Series)
+- Cristofori CU-123E Piano
+- Marshall MG15CF Amplifier
+- Fender Stratocaster American Performer (3 Single-coils)
+- Ibanez GSA220FM (2 Humbuckers)
+- Takamine GD10-NS (Acoustic)
 
-### Other Tech
+### Running
 
-- Apple Airpods Pro
-- Apple Watch
-- Kindle
-- Tesla Model 3 😍
+- Garmin Forerunner 35
+- Asics Sortiemagic RP5
+- Merrell Vapor Glove 4
