--- a/data/snippets/lua.mdx
+++ b/data/snippets/lua.mdx
@@ -3,4 +3,15 @@ title: 'Lua'
 description: 'mostly for neovim'
 ---
 
-content
+check if a lua table `{}` is empty: use the `next` function, check if `next(table) == nil`  
+This code toggles the quickfix list based on the emptiness of the sourced table.
+```lua
+local ToggleQuickFix = function()
+  local next = next
+  if next(vim.fn.filter(vim.fn.getwininfo(), 'v:val.quickfix')) == nil then
+    v('botright copen')
+  else
+    v('cclose')
+  end
+end
+```
