done writing for tiong bahru

--- a/data/blog/tiong-bahru.mdx
+++ b/data/blog/tiong-bahru.mdx
@@ -4,51 +4,20 @@ publishedAt: '2021-09-24'
 summary: "With the assignment-imposed lens of social inequality"
 ---
 
-Districts in Singapore are very loosely defined geographically, so for this
-discussion I'll pick one such definition of Tiong Bahru: Google Map's one.
+Tiong Bahru is a rather small town, with a land area of 1.5 square kilometers. It's on mostly flat terrain, and has no rivers flowing through it. Despite being less than 3km from downtown, the buildings in Tiong Bahru are almost all residential.
 
-<CenteredImage
-  src="/photos/tiong-bahru-google-map.png"
-  alt="Photo"
-  width={500}
-  height={280}
-  priority
-  className="next-image"
-/>
+During my visit, our group chose a 30-storey HDB and went to its top floor to survey Tiong Bahru from above. Already, I could see a range of designs, from simple and standardised clusters of HDB blocks to exotic designs of more modern condominium apartments. One thing that stood out was that while three quarters of Tiong Bahru comprised high-rise HDB blocks, the remaining quarter, a sizable chunk to the east side, had buildings only three storeys and lower.
 
-Tiong Bahru is a rather central town, less than 3km from
-Singapore's Central Business District.
+On closer inspection, the low-rise district wasn't terraces of private properties that one would expect from sub-three-storey buildings in Singapore, but instead were very vintage-looking HDB units. Walking through that area, I saw more sky than most other parts of Singapore. Weirdly, while right next to downtown, it felt like a countryside.
 
-It spans an area of 1.5km^2 with relatively flat terrain and is
-bounded by:
-* Alexandra Road, Ganges Avenue, Havelock Road (from the north)
-* Jalan Bukit Merah and Central Expressway (from the south)
-* Outram Road (from the east)
-* Henderson Road (from the west)
+When I reached home, I looked up property listings across Tiong Bahru online and found that some of the HDB units where I walked had less than 700 square feet of floor area. Prices ranged from $300,000 for such units to $6,000,000 for a condominium apartment nearer to the MRT. This suggests that even within the small town of Tiong Bahru, residents can be in completely different income levels.
 
-Social inequality is and has been an often discussed topic in Singapore, given
-how early Singapore was to globalization, and how diverse our society has
-become. People are comparing the social headstarts and handicaps across races,
-genders, ability groups, you name it. Dank Singaporeans like to compare
+However, I also observed that the public transport within Tiong Bahru is very robust. Bus stops are well-distributed and with a quick measurement, it can be seen that the furthest anyone has to walk to get to a bus stop is 300m—not even one round around an Olympic track.
 
+Neighbourhood amenities such as clinics and eating places are also spread evenly across Tiong Bahru. There are also a few parks and a lot of open spaces across the small town, which can be enjoyed by anyone. It also has schools such as Zhangde Primary School and Gan Eng Seng, so children living there have good options for education without having to travel far. These factors help in the evening out of the social life of people outside their homes.
 
-Physical observations of Tiong Bahru
+Judging based on home prices and floor area alone, one might form the picture that there is a large disparity in standard of living in Tiong Bahru. However, the state of neighbourhood facilities play an important role in forming a living experience, and in Tiong Bahru they seem to be present and universally accessible.
 
-Near the air raid shelter, there were houses which looked really tiny. There is
-no dedicated space for their air conditioning output unit. Their front doors
-open straight to 
+Taking one step back, I have to remind myself that my evaluation of social inequality in Tiong Bahru is formed on one visit and internet searches only. There are plenty of other nuances which I cannot experience for myself, such as how good the healthcare provided in the clinics actually is, or if there happens to be any form of discrimination among the residents, or if the food options there are skewed towards any particular cuisine.
 
-As I walked through Tiong Bahru, I noticed that in terms of the quality of
-construction of housing, there isn't a large disparity.
-
-Singapore Census of Population 2020, Statistical Release 2: Households,
-Geographic Distribution, Transport and Difficulty in Basic Activities. (2021,
-June). Retrieved September 24, 2021.
-
-Research
-
-# Housing Prices
-
-Property prices within Tiong Bahru alone range from $300,000 for a 700 sq ft
-HDB to $6,000,000 condominium apartment. This suggests that even within Tiong
-Bahru, people can be in completely different income levels.
+Either way, social inequality will always exist given that the human life experience can be so diverse. Rather than always looking at it as an affliction of modern society, sometimes it's healthy to temporarily stop fighting the idea of it and appreciate that it's just an inherent part of society which we can learn to live with.
