--- a/data/blog/subtle-art-of-not-giving-a-fck.mdx
+++ b/data/blog/subtle-art-of-not-giving-a-fck.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Book: The Subtle Art of Not Giving a F*ck"
 publishedAt: '2021-09-21'
-summary: "Don't try."
+summary: "Don't try"
 ---
 
 I first picked up this
