updated uses with link to keyboard article

--- a/data/uses.mdx
+++ b/data/uses.mdx
@@ -7,7 +7,7 @@ title: 'Uses'
 - 13" Macbook Air (2017)
 - 24" Lenovo L24e-20
 - Razer Basilisk
-- Keebio Iris Split Keyboard
+- [Keebio Iris Split Keyboard](https://www.nguyenvukhang.com/blog/my-keyboard)
 
 ### Coding
 
