--- a/data/blog/after-installing-arch.mdx
+++ b/data/blog/after-installing-arch.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'After installing Arch Linux'
 publishedAt: '2021-09-27'
-summary: 'What happens after booting into an empty shell'
+summary: 'Setting up a desktop in Arch'
 ---
 
 When I was done installing Arch, all I had was a terminal. No desktop, no
