--- a/data/blog/after-installing-arch.mdx
+++ b/data/blog/after-installing-arch.mdx
@@ -2,6 +2,7 @@
 title: 'After installing Arch Linux'
 publishedAt: '2021-09-27'
 summary: 'Setting up a desktop in Arch'
+tags: [linux, arch]
 ---
 
 When I was done installing Arch, all I had was a terminal. No desktop, no
