--- a/data/blog/installing-arch.mdx
+++ b/data/blog/installing-arch.mdx
@@ -2,6 +2,7 @@
 title: "Installing Arch Linux"
 publishedAt: '2021-09-26'
 summary: "My experience using a minimal operating system"
+tags: [linux, arch]
 ---
 
 After installing vim and having used it for a while, I built up a certain
