--- a/data/blog/making-myself-at-home-in-zsh.mdx
+++ b/data/blog/making-myself-at-home-in-zsh.mdx
@@ -2,6 +2,7 @@
 title: "Making zsh feel like home"
 publishedAt: '2021-09-23'
 summary: "Slipping and sliding in the command line"
+tags: [shell]
 ---
 
 The thing that greets you when you open the terminal is the shell.
