--- a/data/blog/my-keyboard.mdx
+++ b/data/blog/my-keyboard.mdx
@@ -2,6 +2,7 @@
 title: 'My Keyboard'
 publishedAt: '2021-09-28'
 summary: "about keeb.io's iris split keyboard"
+tags: [uses, keyboard]
 ---
 
 I grew up learning how to type on the standard QWERTY layout, which looked
