--- a/data/blog/reading.mdx
+++ b/data/blog/reading.mdx
@@ -2,6 +2,7 @@
 title: 'Rediscovering the joy of reading'
 publishedAt: '2021-09-29'
 summary: 'and where to find books'
+tags: [books]
 ---
 
 When was the last time you held a book in your hands? Felt the tactile sheets of
