--- a/data/blog/subtle-art-of-not-giving-a-fck.mdx
+++ b/data/blog/subtle-art-of-not-giving-a-fck.mdx
@@ -2,6 +2,7 @@
 title: "Book: The Subtle Art of Not Giving a F*ck"
 publishedAt: '2021-09-21'
 summary: "Don't try"
+tags: [books]
 ---
 
 I first picked up this
