--- a/data/blog/vim-2.mdx
+++ b/data/blog/vim-2.mdx
@@ -2,6 +2,7 @@
 title: "My vim journey - part 2"
 publishedAt: '2021-08-25'
 summary: "Starting out with vim"
+tags: [vim]
 ---
 
 When I started out I was slow. Oh, so slow. I took far longer to accomplish the
