--- a/data/blog/vim-1.mdx
+++ b/data/blog/vim-1.mdx
@@ -2,6 +2,7 @@
 title: "My vim journey - part 1"
 publishedAt: '2021-08-25'
 summary: "How I got into vim"
+tags: [vim]
 ---
 
 For a long while, I've been using Sublime Text 3 extensively.  I coded on it,
