--- a/data/blog/vim-sets.mdx
+++ b/data/blog/vim-sets.mdx
@@ -2,6 +2,7 @@
 title: "Your first vimrc"
 publishedAt: '2021-08-04'
 summary: "Simple settings to kick start your journey with vim"
+tags: [vim]
 ---
 
 Unlike most applications with a graphical settings menu, vim's settings are configured inside of a **vimrc** file. But where do you find/put this file?
