added snippet on counting occurences in an array

--- a/data/snippets/javascript.mdx
+++ b/data/snippets/javascript.mdx
@@ -3,6 +3,10 @@ title: 'Javascript'
 description: 'NaN === NaN is false'
 ---
 
+* [Convert Excel array to an array of objects](#convert-excel-array-to-an-array-of-objects)
+* [Check if object is empty](#check-if-object-is-empty)
+* [Remove last character of a string](#remove-last-character-of-a-string)
+
 ## Convert Excel array to an array of objects
 
 An example input is:
@@ -36,6 +40,7 @@ const result = data.map((person) =>
 ```
 
 ## Check if object is empty
+
 ```js
 const empty = {};
 
@@ -44,9 +49,33 @@ JSON.stringify(empty) === "{}"
 ```
 
 ## Remove last character of a string
+
 ```js
 let str = "12345.00";
 str = str.slice(0, -1); 
 console.log(str);
 // 12345.0
+```
+
+## Count occurences in an array and output it to an object
+
+An example input is:
+```js
+['a', 'c', 'b', 'c', 'b', 'a', 'd']
+```
+And the desired output is:
+```js
+{
+  a: 2,
+  b: 2,
+  c: 2,
+  d: 1,
+}
+```
+Here's how I did it:
+```js
+const count = arr.reduce((obj, e) => {
+  obj[e] = (obj[e] || 0) + 1
+  return obj
+}, {})
 ```
