--- a/data/snippets/lua.mdx
+++ b/data/snippets/lua.mdx
@@ -3,6 +3,8 @@ title: 'Lua'
 description: 'mostly for neovim'
 ---
 
+## Toggle Quickfix List
+
 check if a lua table `{}` is empty: use the `next` function, check if `next(table) == nil`  
 This code toggles the quickfix list based on the emptiness of the sourced table.
 ```lua
