--- a/data/blog/vim-1.mdx
+++ b/data/blog/vim-1.mdx
@@ -1,7 +1,7 @@
 ---
 title: "My vim journey - part 1"
 publishedAt: '2021-08-25'
-summary: "How I got into vim"
+summary: "Moving from the last point-and-click editor to vim"
 tags: [vim]
 ---
 
