--- a/data/blog/after-installing-arch.mdx
+++ b/data/blog/after-installing-arch.mdx
@@ -29,9 +29,10 @@ sudo pacman -S firefox xorg xorg-xinit awesome
 ```
 
 into the terminal and hit enter. This installs
-* firefox,
-* xorg (the display server, along with its initializer `xorg-xinit`),
-* and awesome window manager.
+
+- firefox,
+- xorg (the display server, along with its initializer `xorg-xinit`),
+- and awesome window manager.
 
 I actually unknowingly made the more difficult choice of xmonad as my first
 window manager, but that's a story for another day. Let's stick with Awesome for
