--- a/data/blog/installing-arch.mdx
+++ b/data/blog/installing-arch.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Installing Arch Linux"
+title: 'Installing Arch Linux'
 publishedAt: '2021-09-26'
-summary: "My experience using a minimal operating system"
+summary: 'My experience using a minimal operating system'
 tags: [linux, arch]
 ---
 
