--- a/data/blog/math-and-code.mdx
+++ b/data/blog/math-and-code.mdx
@@ -11,8 +11,8 @@ grind. After leaving the Army, I didn't quite get straight back into math, but
 instead started on some coding projects. Now, I'm back studying math full-time
 at university, and I see two things which math can learn from code.
 
-* [Variable scoping](#variable-scoping)
-* [Standardizing syntax](#standardizing-syntax)
+- [Variable scoping](#variable-scoping)
+- [Standardizing syntax](#standardizing-syntax)
 
 ## Variable scoping
 
