--- a/data/blog/my-keyboard-2.mdx
+++ b/data/blog/my-keyboard-2.mdx
@@ -9,8 +9,8 @@ A big reason why I chose to buy my keyboard is because it is compatible with the
 [qmk](https://github.com/qmk/qmk_firmware) software. With this, I can define my
 own keyboard shortcuts and attach them to really specific functions.
 
-* [Fuzzy PDF Finder](#fuzzy-pdf-finder)
-* [App Launcher](#app-launcher)
+- [Fuzzy PDF Finder](#fuzzy-pdf-finder)
+- [App Launcher](#app-launcher)
 
 ## Fuzzy PDF Finder
 
