--- a/data/blog/my-keyboard.mdx
+++ b/data/blog/my-keyboard.mdx
@@ -52,10 +52,11 @@ had to be binded to chords (with my custom modifier at the right
 thumb: <Kbd>↑</Kbd>).
 
 So to type braces on my keyboard, I needed to do these:
-* to get <Kbd>[</Kbd>, I press <Kbd>↑ + o</Kbd>.
-* to get <Kbd>]</Kbd>, I press <Kbd>↑ + p</Kbd>.
-* to get <Kbd>{</Kbd>, I press <Kbd>↑ + Shift + o</Kbd>.
-* to get <Kbd>}</Kbd>, I press <Kbd>↑ + Shift + p</Kbd>.
+
+- to get <Kbd>[</Kbd>, I press <Kbd>↑ + o</Kbd>.
+- to get <Kbd>]</Kbd>, I press <Kbd>↑ + p</Kbd>.
+- to get <Kbd>{</Kbd>, I press <Kbd>↑ + Shift + o</Kbd>.
+- to get <Kbd>}</Kbd>, I press <Kbd>↑ + Shift + p</Kbd>.
 
 To program the keyboard, I use [qmk](https://github.com/qmk/qmk_firmware). It
 grants me full control over the keyboard, so I can do my own cool stuff like
