--- a/data/blog/vim-1.mdx
+++ b/data/blog/vim-1.mdx
@@ -1,18 +1,18 @@
 ---
-title: "My vim journey - part 1"
+title: 'My vim journey - part 1'
 publishedAt: '2021-08-25'
-summary: "Moving from the last point-and-click editor to vim"
+summary: 'Moving from the last point-and-click editor to vim'
 tags: [vim]
 ---
 
-For a long while, I've been using Sublime Text 3 extensively.  I coded on it,
-took notes on it, planned events on it.  I loved it because it was one of the
+For a long while, I've been using Sublime Text 3 extensively. I coded on it,
+took notes on it, planned events on it. I loved it because it was one of the
 few apps I had where I can install extensions to customize the look and feel of
 the app, but also mostly because it was fast.
 
 As time went by, I felt that the configuration options open to me were not
-granular enough.  Customization was limited to what the endpoints which the
-developers left open.  Documentation also lagged far behind features.
+granular enough. Customization was limited to what the endpoints which the
+developers left open. Documentation also lagged far behind features.
 
 The large letters in caps "UNREGISTERED" did not help with the experience.
 $99 for a text editor also didn't make sense.
