--- a/data/blog/vim-2.mdx
+++ b/data/blog/vim-2.mdx
@@ -1,7 +1,7 @@
 ---
-title: "My vim journey - part 2"
+title: 'My vim journey - part 2'
 publishedAt: '2021-08-25'
-summary: "Starting out in vim"
+summary: 'Starting out in vim'
 tags: [vim]
 ---
 
