--- a/data/blog/vim-3.mdx
+++ b/data/blog/vim-3.mdx
@@ -47,9 +47,9 @@ the word, then press `i` and type in the new word. With <Kbd>c</Kbd>, you can
 press `cw` and accomplish the same task as `dwi`. I remember `cw` as "change
 word." The neat thing is: you can pair <Kbd>c</Kbd> with any verbs!
 
-* `ciw` will change the word your cursor is on (doesn't need to be at the front)
-* `ci'` will delete the text inside single quotes and put you in Insert mode.
-* `ca(` will delete the text inside the parentheses, including the parentheses,
+- `ciw` will change the word your cursor is on (doesn't need to be at the front)
+- `ci'` will delete the text inside single quotes and put you in Insert mode.
+- `ca(` will delete the text inside the parentheses, including the parentheses,
   and put you in Insert mode.
 
 (you can think of `ci` as "change in something" and `ca` as "change around
