--- a/data/uses.mdx
+++ b/data/uses.mdx
@@ -7,13 +7,14 @@ title: 'Uses'
 - 13" Macbook Air (2017)
 - 24" Lenovo L24e-20
 - Razer Basilisk
-- <a href="/blog/my-keyboard">Keebio Iris Split Keyboard</a>
+- [Keebio Iris Split Keyboard](/blog/my-keyboard)
 
 ### Coding
 
-- Editor: neovim ([config](https://github.com/nguyenvukhang/neovim))
+- Editor: neovim
 - Theme: gruvbox
 - Terminal: kitty / zsh
+- Here are my [dotfiles][dotfiles]
 
 ### Audio
 
@@ -23,14 +24,16 @@ title: 'Uses'
 
 ### Music
 
-- Cristofori CU-123E Piano
-- Marshall MG15CF Amplifier
 - Fender Stratocaster American Performer (3 Single-coils)
 - Ibanez GSA220FM (2 Humbuckers)
 - Takamine GD10-NS (Acoustic)
+- Marshall MG15CF Amplifier
+- Cristofori CU-123E Piano
 
 ### Running
 
 - Garmin Forerunner 35
 - Asics Sortiemagic RP5
 - Merrell Vapor Glove 4
+
+[dotfiles]: https://github.com/nguyenvukhang/dots
