--- a/data/uni.mdx
+++ b/data/uni.mdx
@@ -1,5 +1,8 @@
-University | certification ⊂ competency
-=======================================
+---
+uni
+---
+
+# University | certification ⊂ competency
 
 Useful links:
 
@@ -15,15 +18,13 @@ My Timetables (NUSMods):
 - [Y1 Sem 1][y1s1]
 - [Y1 Sem 2][y1s2]
 
-To graduate (I'm a math major):
--------------------------------
+## To graduate (I'm a math major):
 
 - [CHS Common Curriculum](#chs-common-curriculum)
 - [General Education Mods](#general-education-mods)
 - [Career Compass](#career-compass)
 
-CHS Common Curriculum
----------------------
+## CHS Common Curriculum
 
 [Overall][chs-common-curriculum]  
 [FOS][fos-common-curriculum]
@@ -53,8 +54,7 @@ _tl;dr_
   - Module Choice I: "Basket of modules, Level 2000"
   - Module Choice II: "Basket of modules, Level 2000"
 
-General Education Mods
-----------------------
+## General Education Mods
 
 [link][ge-mods]
 
@@ -62,8 +62,7 @@ General Education Mods
 Engineering and School of Design and Environment will satisfy GE
 requirements with modules within their common curriculum."
 
-Career Compass
---------------
+## Career Compass
 
 [tasks][career-compass]
 
