--- a/data/blog/my-keyboard.mdx
+++ b/data/blog/my-keyboard.mdx
@@ -47,7 +47,7 @@ I also used to hit <Kbd>C</Kbd> with by left index, but now I have to mentally
 remap that to my left middle finger.
 
 Not to mention it has less keys than a normal keyboard,
-so symbols like <Kbd>[</Kbd>, <Kbd>]</Kbd>, <Kbd>{</Kbd>, and <Kbd>}</Kbd>
+so symbols like <Kbd>[</Kbd>, <Kbd>]</Kbd>, <Kbd>{'{'}</Kbd>, and <Kbd>}</Kbd>
 had to be binded to chords (with my custom modifier at the right
 thumb: <Kbd>↑</Kbd>).
 
@@ -55,7 +55,7 @@ So to type braces on my keyboard, I needed to do these:
 
 - to get <Kbd>[</Kbd>, I press <Kbd>↑ + o</Kbd>.
 - to get <Kbd>]</Kbd>, I press <Kbd>↑ + p</Kbd>.
-- to get <Kbd>{</Kbd>, I press <Kbd>↑ + Shift + o</Kbd>.
+- to get <Kbd>{'{'}</Kbd>, I press <Kbd>↑ + Shift + o</Kbd>.
 - to get <Kbd>}</Kbd>, I press <Kbd>↑ + Shift + p</Kbd>.
 
 To program the keyboard, I use [qmk](https://github.com/qmk/qmk_firmware). It
